--- a/labs/The_Perfect_Sandwich/Views/Lab3.html
+++ b/labs/The_Perfect_Sandwich/Views/Lab3.html
@@ -2,7 +2,7 @@
 <!-- Matthew Morrissette
 - 11/6/18
 - Roast Pork and Pickled Cucumber Sandwich
-- 1 paragraph description about the page, style and images
+- its a recipe for a sandwich. its blue cause i like blue and i used the image from the below link
 - https://www.realsimple.com/food-recipes/browse-all-recipes/roast-pork-sandwich 
  -->
 
