--- a/docs/classwork/javascript/labs/unzipped/digital_clock/clock/views/index.html
+++ b/docs/classwork/javascript/labs/unzipped/digital_clock/clock/views/index.html
@@ -10,13 +10,20 @@
 		<meta charset="utf-8">
 		<!-- Standard Coder Includes -->
 		<script src="../app/jquery-3.3.1.min.js"></script>
+		<!--P5 stuff-->
+		<script src="../../libraries/p5.min.js"></script>
+		<script src="../../libraries/addons/p5.dom.min.js"></script>
+		<script src="../../libraries/addons/p5.dom.js"></script>
 		<!-- End Coder Includes -->
 
 		<!-- This app's includes -->
 		<link href="../static/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
 		<script src="../static/js/index.js"></script>
+		<script src="../static/js/sketch.js"></script>
 		<!-- End apps includes -->
 	</head>
 	<body>
+		<div id='showClock'></div>
+		<div id='clock'></div>
 	</body>
 </html>
