--- a/docs/classwork/javascript/labs/unzipped/comic_creator/views/index.html
+++ b/docs/classwork/javascript/labs/unzipped/comic_creator/views/index.html
@@ -26,27 +26,24 @@
 			<h2>Matthew Morrissette</h2>
 		</div>
 		<div id="panel1">
-			<div class="narration top right infront">No one had visited the castle in months</div>
+			<div class="narration top right infront">No one had visited Grampa's castle in months</div>
 			<div class="bigtext bottom left infront">Best to get this over with...</div>
 		</div>
 		<div id="panel2">
-			<div class="narration top left infront">More narration.</div>
-			<div class="bigtext bottom right infront">More talking.</div>
+			<div class="narration top left infront">The whole family thought it was deserted after he died.</div>
+			<div class="bigtext bottom right infront">This place is creeping me out...</div>
 		</div>
 		<div id="panel3">
-			<div class="narration top left infront">More narration.</div>
-			<div class="bigtext bottom right infront">More talking.</div>
-			<img src= "../static/media/panel_3.jpg" id= "image3" class ="inback">
+			<div class="narration top left infront">In a way, it was.</div>
+			<div class="bigtext bottom right infront">We should probably put flowers on these while we're here.</div>
 		</div>
 		<div id="panel4">
-			<div class="narration top left infront">More narration.</div>
+			<div class="narration top left infront">But not truly.</div>
 			<div class="bigtext bottom right infront">More talking.</div>
-			<img src= "../static/media/panel_4.jpg" id= "image4" class ="inback">
 		</div>
 		<div id="panel5">
 			<div class="narration top left infront">More narration.</div>
 			<div class="bigtext bottom right infront">More talking.</div>
-			<img src= "../static/media/panel_5.jpg" id= "image5" class ="inback">
 		</div>
 	</div>
 </body>
