--- a/docs/classwork/javascript/labs/unzipped/comic_creator/views/index.html
+++ b/docs/classwork/javascript/labs/unzipped/comic_creator/views/index.html
@@ -4,7 +4,7 @@
 	<title>Comic Creator</title>
 	<meta charset="utf-8">
 	<!-- Imports -->
-
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet"/>
 	<link href="../static/css/index.css" media="screen" rel="stylesheet" type="text/css"/>
 	<script src="../app/jquery-3.3.1.min.js"></script>
 	<script src="../static/common/ace-min/ace.js" type="text/javascript" charset="utf-8"></script>
@@ -30,11 +30,11 @@
 			<div class="bigtext bottom left infront">Best to get this over with...</div>
 		</div>
 		<div id="panel2">
-			<div class="narration top left infront">More narration.</div>
-			<div class="bigtext bottom right infront">More talking.</div>
+			<div class="narration top left infront">Everyone thought it was deserted</div>
+			<div class="bigtext bottom right infront">This place is giving me the willies.</div>
 		</div>
 		<div id="panel3">
-			<div class="narration top left infront">More narration.</div>
+			<div class="narration top left infront">We were all so so very wrong. But we didn't know it yet...</div>
 			<div class="bigtext bottom right infront">More talking.</div>
 			<img src= "../static/media/panel_3.jpg" id= "image3" class ="inback">
 		</div>
