--- a/docs/classwork/javascript/labs/unzipped/comic_creator/static/css/index.css
+++ b/docs/classwork/javascript/labs/unzipped/comic_creator/static/css/index.css
@@ -56,8 +56,8 @@ h2 {
     width: 280px;
     border:10px solid #2b2b2b;
     float: left;
-    background-color: #77da62;
-    overflow: hidden;
+    background-image: url("../media/hall.jpg");
+	background-size: 280px 280px;
 }
 
 #panel3 {
@@ -104,10 +104,9 @@ h2 {
 }
 
 .bigtext {
-    font-family: "Comic Sans MS";
+    font-family: 'source sans pro' sans-serif;
     color: white;
     font-style: italic;
-    font-weight: 900;
     font-size: 30px;
     line-height: 100%;
     margin: 20px;
